--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
   "private": false,
   "homepage": "https://github.com/react-native-voice/voice",
   "devDependencies": {
-    "@react-native-community/eslint-config": "^0.0.7",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@semantic-release/git": "^9.0.0",
-    "@tsconfig/node10": "^1.0.7",
+    "@tsconfig/node10": "^1.0.11",
     "@types/invariant": "^2.2.31",
-    "@types/react-native": "0.69.3",
+    "@types/react-native": "^0.73.0",
     "eslint": "^6.8.0",
     "lint-staged": "^7.2.0",
     "react": "18.3.1",
     "react-native": "^0.77.0",
     "semantic-release": "^17.0.4",
-    "typescript": "3.8.3"
+    "typescript": "^5.7.3"
   },
   "keywords": [
     "android",
@@ -49,7 +49,8 @@
     "lint:plugin": "eslint plugin/src/*"
   },
   "dependencies": {
-    "invariant": "^2.2.4",
-    "@expo/config-plugins": "^2.0.0"
+    "@expo/config-plugins": "^2.0.0",
+    "@types/react": "^19.0.8",
+    "invariant": "^2.2.4"
   }
 }
