--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "ES2016"
     ] /* Specify library files to be included in the compilation. */,
     "jsx":"react",
+    "skipLibCheck": true,
     "declaration": true /* Generates corresponding '.d.ts' file. */,
     "declarationMap": true /* Generates a sourcemap for each corresponding '.d.ts' file. */,
     "outDir": "./dist" /* Redirect output structure to the directory. */,
